# credit_risk_network

./: .gitignore  LICENSE  data_processing.ipynb  grafos_downgrades.ipynb  input_grafo.csv  pyproject.toml
actividad_afip/: .gitignore  AGENTS.md  README.md  pyproject.toml
actividad_afip/src/ratings_afip/: __init__.py  cli.py  config.py  models.py  parser.py  services.py
scraper_cnv/: .gitignore  AGENTS.md  README.md  fetch_presentation.py  fetch_presentation_old.py  pyproject.toml
scraper_cnv/backup/: estado_scraper.json  sociedades_cache.json
scraper_cnv/src/scraper_cnv/: __init__.py  __main__.py  cli.py  config.py  logging_config.py  pdf_downloader.py  scraper.py
